factory data for cc13x2_26x2

--- a/src/platform/cc13xx_26xx/cc13x2_26x2/BUILD.gn
+++ b/src/platform/cc13xx_26xx/cc13x2_26x2/BUILD.gn
@@ -44,6 +44,8 @@ static_library("cc13x2_26x2") {
     "KeyValueStoreManagerImpl.h",
     "PlatformManagerImpl.h",
     "SystemPlatformConfig.h",
+    "../FactoryDataProvider.h",
+    "../FactoryDataProvider.cpp"
   ]
 
   deps = []
